# qt6-project-template

./: CMakeLists.txt  default.nix  qt.conf  readme.md
src/: main-cli.cc  main.cc  window.cc
